--- a/config.json
+++ b/config.json
@@ -6,8 +6,8 @@
         "verify"
     ],
     "verify": {
-        "message_id": 852499368912748554,
-        "reaction": "👍"
+        "message_id": 853296325617778718,
+        "reaction": "🙃"
     },
     "guild_id": 797077546251845632
 }
