--- a/config.json
+++ b/config.json
@@ -6,8 +6,8 @@
         "verify"
     ],
     "verify": {
-        "message_id": 853296325617778718,
-        "reaction": "🙃"
+        "message_id": 854095453157851167,
+        "reaction": "🧐"
     },
     "guild_id": 847201474324201553
 }
